...
                                <rect key="frame" x="63.666666666666657" y="312" width="263" height="220"/>
                                <subviews>
                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Pick a colour for X and O" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="aop-wQ-hTd">
                                        <rect key="frame" x="0.0" y="0.0" width="263" height="30"/>
                                        <constraints>
...
                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="pQz-Ch-lf4">
                                <rect key="frame" x="145" y="640" width="100" height="100"/>
                                <accessibility key="accessibilityConfiguration" identifier="START"/>
                                <constraints>
                                    <constraint firstAttribute="width" relation="greaterThanOrEqual" constant="100" id="6YX-k4-QlA"/>
...
                                            <button opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="249" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="C8d-qU-B7e" userLabel="Button 7">
                                                <rect key="frame" x="0.0" y="0.0" width="95" height="95"/>
                                                <accessibility key="accessibilityConfiguration" identifier="topLeft"/>
                                                <constraints>
                                                    <constraint firstAttribute="height" constant="95" id="1A9-WJ-fbR"/>
...
                                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Iwm-vT-oqb" userLabel="Button 5">
                                                <rect key="frame" x="102" y="0.0" width="95" height="95"/>
                                                <accessibility key="accessibilityConfiguration" identifier="middle"/>
                                                <constraints>
                                                    <constraint firstAttribute="width" constant="95" id="FV9-5L-B2G"/>
...
                                            <button opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="249" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="UnN-rM-3Ub" userLabel="Button 1">
                                                <rect key="frame" x="0.0" y="0.0" width="95" height="95"/>
                                                <accessibility key="accessibilityConfiguration" identifier="bottomLeft"/>
                                                <constraints>
                                                    <constraint firstAttribute="width" constant="95" id="9Ma-os-a5W"/>
...
                                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="1tj-F0-XO0" userLabel="Button 3">
                                                <rect key="frame" x="204" y="0.0" width="95" height="95"/>
                                                <accessibility key="accessibilityConfiguration" identifier="bottomRight"/>
                                                <constraints>
                                                    <constraint firstAttribute="width" constant="95" id="mnv-2I-gHE"/>
...
                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Turn Label 1" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="7ri-ul-0Nt">
                                <rect key="frame" x="127.33333333333333" y="100" width="135.33333333333337" height="40"/>
                                <accessibility key="accessibilityConfiguration" identifier="turnLabel1">
                                    <accessibilityTraits key="traits" staticText="YES" notEnabled="YES"/>
                                </accessibility>
...
